src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true"
expression: snapshot
---
initial configure:
size: 1248 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
