src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false"
expression: snapshot
---
initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
