src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dhF500-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault window height: F500\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 608 × 500, bounds: 1240 × 680, states: []
size: 608 × 500, bounds: 1240 × 680, states: [Activated]
